[gd_scene load_steps=5 format=3 uid="uid://dkb0vk52b8tf1"]

[ext_resource type="Script" path="res://scripts/base.gd" id="1_jd6s8"]
[ext_resource type="Material" uid="uid://b5sldrusscyhx" path="res://mat/red.tres" id="1_m73dy"]
[ext_resource type="PackedScene" uid="uid://d4eeqfct6vua5" path="res://scenes/healthbar.tscn" id="2_8ktnn"]

[sub_resource type="ViewportTexture" id="ViewportTexture_0vvhs"]
viewport_path = NodePath("Sprite3D/SubViewport")

[node name="base" type="CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
use_collision = true
collision_layer = 3
collision_mask = 3
size = Vector3(40, 20, 50)
script = ExtResource("1_jd6s8")

[node name="base" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
visible = false
material_override = ExtResource("1_m73dy")
use_collision = true
collision_layer = 7
collision_mask = 7
size = Vector3(40, 20, 50)

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 25, 0)
billboard = 1
texture = SubResource("ViewportTexture_0vvhs")

[node name="SubViewport" type="SubViewport" parent="Sprite3D"]
transparent_bg = true

[node name="ProgressBar" parent="Sprite3D/SubViewport" instance=ExtResource("2_8ktnn")]

[node name="cashTimer" type="Timer" parent="."]

[connection signal="timeout" from="cashTimer" to="." method="_on_cash_timer_timeout"]
